# django-template

./: Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
django_template/: settings.py  urls.py
django_template/django_template/: settings.py  urls.py
django_template/entrypoints/: drf_views.py
sample_app/: urls.py
sample_app/adapter/: repo.py
sample_app/domain/: models.py
sample_app/entrypoints/: drf_views.py
sample_app/migrations/: 0001_initial.py
sample_app/service/: dto.py  interface.py  usecase.py
