[tool.poetry]
name = "django-template"
version = "0.1.0"
description = "Django template API server"
authors = ["kreeos <kanghyunkrislee@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "5.0"
djangorestframework = "^3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
